--- a/databank/import_export/templates/import_export/display_table.html
+++ b/databank/import_export/templates/import_export/display_table.html
@@ -6,41 +6,41 @@
 
 
 <!-- Filter Buttons -->
-<div class="filter-btns bg-light p-3">
-    <p class="d-inline-flex gap-1">
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
-            aria-expanded="false" aria-controls="collapseFilter">
-            Show Filters
-        </button>
-        <a href="{% url 'upload_trade_excel' %}">
-            <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseUpload" aria-expanded="false" aria-controls="collapseUpload">
-                Upload Excel
+<!-- <div class="filter-btns bg-light p-3">
+        <p class="d-inline-flex gap-1">
+            <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
+                aria-expanded="false" aria-controls="collapseFilter">
+                Show Filters
+            </button>
+            <a href="{% url 'upload_trade_excel' %}">
+            <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseUpload"
+                aria-expanded="false" aria-controls="collapseUpload">
+               Upload Excel
             </button></a>
+    
+            <a class="styled-link" href="{% url 'upload_trade_record' %}">
+                <button class="btn btn-outline-dark">Add Trade Data</button>
+            </a>
+        </p>
+    </div> -->
 
-        <a class="styled-link" href="{% url 'upload_trade_record' %}">
-            <button class="btn btn-outline-dark">Add Trade Data</button>
-        </a>
-    </p>
-</div>
 
-
-<button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseMoreFilters"
+<button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
     aria-expanded="false" aria-controls="collapseFilter">Filters</button>
 
 <div class="bg-light mt-2">
     <div class="collapse  shadow rounded-2 p-3" id="collapseFilter">
-        <form class="row g-3" method="GET" action=".">
-
+        <!-- <form class="row g-3" method="GET" action=".">
+    
             <div class="form-group col-12">
                 <div class="input-group">
                     <input class="form-control py-2 border-right-0 border" type="search"
                         name="currency_product_originDestination"
                         placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-
+    
                 </div>
             </div>
-
+    
             <div class="col-md-3">
                 <label for="date_minimum">Publish date minimum</label>
                 <input type="date" class="form-control" id="date_minimum" name="date_min">
@@ -49,20 +49,19 @@
                 <label for="date_maximum">Publish date maximum</label>
                 <input type="date" class="form-control" id="date_maximum" name="date_max">
             </div>
-
+    
             <div class="col-md-3 ">
                 <label for="viewCountMin">Minimum Quantity</label>
                 <input type="number" min=0 class="form-control" id="viewCountMin" placeholder="0" name="quantity_min">
             </div>
             <div class="col-md-3 ">
                 <label for="viewCountMax">Maximum Quantity</label>
-                <input type="number" min=0 class="form-control" id="viewCountMax" placeholder="1000"
-                    name="quantity_max">
+                <input type="number" min=0 class="form-control" id="viewCountMax" placeholder="1000" name="quantity_max">
             </div>
-
-
-
-
+    
+    
+    
+    
             <div class="form-group col-md-3">
                 <label for="trade_type">Trade Type</label>
                 <select id="trade_type" class="form-control" name="trade_type">
@@ -72,7 +71,7 @@
                     {% endfor %}
                 </select>
             </div>
-
+    
             <div class="form-group col-md-3">
                 <label for="country_category">Country</label>
                 <select id="country_category" class="form-control" name="country_category">
@@ -82,7 +81,7 @@
                     {% endfor %}
                 </select>
             </div>
-
+    
             <div class="form-group col-md-3">
                 <label for="unit_category">Unit</label>
                 <select id="unit_category" class="form-control" name="unit_category">
@@ -92,7 +91,7 @@
                     {% endfor %}
                 </select>
             </div>
-
+    
             <div class="form-group col-md-3">
                 <label for="hs_code">HS Code</label>
                 <select id="hs_code" class="form-control" name="hs_code">
@@ -102,54 +101,50 @@
                     {% endfor %}
                 </select>
             </div>
-
+    
             <button type="submit" class="col-md-1 btn btn-primary">Search</button>
-        </form>
+        </form> -->
+        <form action="." class="row px-3  fw-normal" method="GET">
 
+            <div class="row col-6">
+                <label class="col-form-label text-end  col-sm-3" for="hs_code">HS Code</label>
+                <div class="col-md-9">
+                    <select id="hs_code" class="form-select form-select-sm" name="hs_code">
+                        <option selected>--</option>
+                        {% for hs_code in hs_codes %}
+                        <option value="{{hs_code.id }}">{{hs_code}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+
+            <div class="row col-6">
+                <label class="col-form-label text-end  col-sm-3" for="country_category">Country</label>
+                <div class="col-md-9">
+                    <select id="country_category" class="form-select form-select-sm" name="country_category">
+                        <option selected>--</option>
+                        {% for country_category in country_categories %}
+                        <option value="{{country_category.id }}">{{country_category}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+
+            <div class="row col-6">
+                <label class="col-form-label text-end col-sm-3" for="trade_type">Trade Type</label>
+                <div class="col-md-9"><select id="trade_type" class="form-select form-select-sm" name="trade_type">
+                        <option selected>--</option>
+                        {% for trade_type in trade_type_categories %}
+                        <option value="{{trade_type}}">{{trade_type}}</option>
+                        {% endfor %}
+                    </select></div>
+            </div>
+            <button type="submit" class="btn btn-primary col-1 btn-sm ">Search</button>
+        </form>
 
     </div>
 </div>
 
-
-<div class="" id="collapseMoreFilters">
-    <form action="." class="row px-3  fw-normal" method="GET">
-
-        <div class="row col-6">
-            <label class="col-form-label text-end  col-sm-3" for="hs_code">HS Code</label>
-            <div class="col-md-9">
-                <select id="hs_code" class="form-select form-select-sm" name="hs_code">
-                    <option selected>--</option>
-                    {% for hs_code in hs_codes %}
-                    <option value="{{hs_code.id }}">{{hs_code}}</option>
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
-
-        <div class="row col-6">
-            <label class="col-form-label text-end  col-sm-3" for="country_category">Country</label>
-            <div class="col-md-9">
-                <select id="country_category" class="form-select form-select-sm" name="country_category">
-                    <option selected>--</option>
-                    {% for country_category in country_categories %}
-                    <option value="{{country_category.id }}">{{country_category}}</option>
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
-
-        <div class="row col-6">
-            <label class="col-form-label text-end col-sm-3" for="trade_type">Trade Type</label>
-            <div class="col-md-9"><select id="trade_type" class="form-select form-select-sm" name="trade_type">
-                    <option selected>--</option>
-                    {% for trade_type in trade_type_categories %}
-                    <option value="{{trade_type}}">{{trade_type}}</option>
-                    {% endfor %}
-                </select></div>
-        </div>
-        <button type="submit" class="btn btn-primary col-1 btn-sm ">Search</button>
-    </form>
-</div>
 
 <!-- table info -->
 
