--- a/databank/import/templates/import/display_trade_table.html
+++ b/databank/import/templates/import/display_trade_table.html
@@ -5,5 +5,8 @@
 <a href="{% url 'upload_country_meta_excel' %}">Upload Country Meta</a>
 <br>
 <a href="{% url 'upload_unit_meta_excel' %}">Upload Unit Meta</a>
+<br>
+<a href="{% url 'upload_hs_code_meta_excel' %}">Upload HS Code Meta</a>
+
 
 {% endblock  %}
