--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -1,76 +1,113 @@
 {% extends 'main.html' %}
 {% block content %}
 
+
+
 <button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
-aria-expanded="false" aria-controls="collapseFilter">Filters</button>
+    aria-expanded="false" aria-controls="collapseFilter">Filters</button>
 
 
 <div class="bg-light mt-2">
-<div class="collapse shadow rounded-2 p-3 " id="collapseFilter">
-    <form action="." class="row px-3  fw-normal" method="GET">
-
-        <div class="row col-6">
-            <label class="col-form-label text-end  col-sm-3" for="hs_code">HS Code</label>
-            <div class="col-md-9">
-                <select id="hs_code" class="form-select form-select-sm" name="hs_code">
-                    <option selected>--</option>
-                    {% for hs_code in hs_codes %}
-                    <option value="{{hs_code.id }}">{{hs_code}}</option>
-                    {% endfor %}
-                </select>
+    <div class="collapse shadow rounded-2 p-3 " id="collapseFilter">
+        <form action="." class="row px-3  fw-normal" method="GET">
+            <div class="row col-6">
+                <label class="col-form-label text-end  col-sm-3" for="hs_code">HS Code</label>
+                <div class="col-md-9">
+                    <select id="hs_code" class="form-select form-select-sm" name="hs_code">
+                        <option selected>--</option>
+                        {% for hs_code in hs_codes %}
+                        <option value="{{hs_code.id }}">{{hs_code}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
-        </div>
 
-        <div class="row col-6">
-            <label class="col-form-label text-end  col-sm-3" for="country_category">Country</label>
-            <div class="col-md-9">
-                <select id="country_category" class="form-select form-select-sm" name="country_category">
-                    <option selected>--</option>
-                    {% for country_category in country_categories %}
-                    <option value="{{country_category.id }}">{{country_category}}</option>
-                    {% endfor %}
-                </select>
+            <div class="row col-6">
+                <label class="col-form-label text-end  col-sm-3" for="country_category">Country</label>
+                <div class="col-md-9">
+                    <select id="country_category" class="form-select form-select-sm" name="country_category">
+                        <option selected>--</option>
+                        {% for country_category in country_categories %}
+                        <option value="{{country_category.id }}">{{country_category}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
-        </div>
 
-        <div class="row col-6">
-            <label class="col-form-label text-end col-sm-3" for="trade_type">Trade Type</label>
-            <div class="col-md-9"><select id="trade_type" class="form-select form-select-sm" name="trade_type">
-                    <option selected>--</option>
-                    {% for trade_type in trade_type_categories %}
-                    <option value="{{trade_type}}">{{trade_type}}</option>
-                    {% endfor %}
-                </select></div>
-        </div>
-        <button type="submit" class="btn btn-primary col-1 btn-sm ">Search</button>
-    </form>
+            <div class="row col-6">
+                <label class="col-form-label text-end col-sm-3" for="trade_type">Trade Type</label>
+                <div class="col-md-9"><select id="trade_type" class="form-select form-select-sm" name="trade_type">
+                        <option selected>--</option>
+                        {% for trade_type in trade_type_categories %}
+                        <option value="{{trade_type}}">{{trade_type}}</option>
+                        {% endfor %}
+                    </select></div>
+            </div>
+            <button type="submit" class="btn btn-primary col-1 btn-sm ">Search</button>
+        </form>
 
+    </div>
 </div>
-</div>
 
-<div class="fs-5 my-4 fw-bold text-center">List of products exported by Nepal in 2022</div>
+<div class="fs-5 my-4 fw-bold text-center">List </div>
 
+
+{% if request.GET.hs_code != '--' and request.GET.hs_code != None %}
 <div class="table-responsive mt- bg-light p-3">
-   <table class="table table-striped table-bordered table-sm">
-    <thead class="">
-        <tr>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Importers</th>
-            {% for year in years %}
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Amount in Year {{year}} </th>
+    <table class="table table-striped table-bordered table-sm">
+        <thead class="">
+            <tr>
+                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+                    Importers
+                </th>
+                {% for year in years %}
+                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Amount in Year {{year}} </th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody class="table-hover">
+            {% for hs_code, year_data in result_hs_code.items %}
+            <tr>
+                <td>{{ hs_code }}</td>
+                {% for year, total_amount in year_data.items %}
+                <td>{{ total_amount }}</td>
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-    </thead>
-    <tbody class="table-hover">
-        {% for origin_destination, year_data in total_amount_by_origin_destination.items %}
+
+            
+        </tbody>
+    </table>
+</div>
+{% else %}
+<div class="table-responsive mt- bg-light p-3">
+    <table class="table table-striped table-bordered table-sm">
+        <thead class="">
+            <tr>
+                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+                    Importers
+                </th>
+                {% for year in years %}
+                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Amount in Year {{year}} </th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody class="table-hover">
+            {% for origin_destination, year_data in result_country.items %}
             <tr>
                 <td>{{ origin_destination }}</td>
                 {% for year, total_amount in year_data.items %}
-                    <td>{{ total_amount }}</td>
+                <td>{{ total_amount }}</td>
                 {% endfor %}
             </tr>
-        {% endfor %}
-    </tbody>
-</table> 
+            {% endfor %}
+
+            
+        </tbody>
+    </table>
 </div>
+{% endif %}
+
+
 
 {% endblock content %}
