--- a/databank/import/templates/import/time_series_commodity.html
+++ b/databank/import/templates/import/time_series_commodity.html
@@ -1,10 +1,13 @@
 {% extends 'main.html' %}
 {% block content %}
 
+{{result}}
+
 <button class="btn btn-primary btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter"
     aria-expanded="false" aria-controls="collapseFilter">Filters</button>
 
 
+    
 <div class="bg-light mt-2">
     <div class="collapse shadow rounded-2 p-3 " id="collapseFilter">
         <form action="." class="row px-3  fw-normal" method="GET">
@@ -14,7 +17,7 @@
                     <select id="hs_code" class="form-select form-select-sm" name="hs_code">
                         <option selected>--</option>
                         {% for hs_code in hs_codes %}
-                        <option value="{{hs_code }}">{{hs_code}}</option>
+                        <option value="{{hs_code.id }}">{{hs_code}}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -48,37 +51,6 @@
 </div>
 
 <div class="fs-5 my-4 fw-bold text-center">List </div>
-
-
-
-<div class="table-responsive mt- bg-light p-3">
-    <table class="table table-striped table-bordered table-sm">
-        <thead class="">
-            <tr>
-                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-                    Importers
-                </th>
-                {% for year in years %}
-                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Amount in Year {{year}} </th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody class="table-hover">
-            {% for origin_destination, year_data in result_country.items %}
-            <tr>
-                <td>{{ origin_destination }}</td>
-                {% for year, total_amount in year_data.items %}
-                <td>{{ total_amount }}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-
-            
-        </tbody>
-    </table>
-</div>
-
-
 
 
 {% endblock content %}
