--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -56,24 +56,37 @@
     <table class="table table-striped table-bordered table-sm">
         <thead class="">
             <tr>
-                <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-                    Importers
-                </th>
+                {% if request.GET.country_category != '--' and  request.GET.country_category != None %}
+                    <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">HS Codes</th>
+                    {% else %}
+                    <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Importers</th>
+                    {% endif %}
                 {% for year in years %}
                 <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">Amount in Year {{year}} </th>
                 {% endfor %}
             </tr>
         </thead>
         <tbody class="table-hover">
-            {% for origin_destination, year_data in result_country.items %}
-            <tr>
-                <td>{{ origin_destination }}</td>
-                {% for year, total_amount in year_data.items %}
-                <td>{{ total_amount }}</td>
+            {% if request.GET.country_category != '--' and  request.GET.country_category != None %}
+                {% for hs_code, year_data in result_hs_code.items %}
+                    <tr>
+                        <td>{{ hs_code }}</td>
+                        {% for year, total_amount in year_data.items %}
+                        <td>{{ total_amount }}</td>
+                        {% endfor %}
+                    </tr>
                 {% endfor %}
-            </tr>
-            {% endfor %}
-
+            
+            {% else %}
+                {% for origin_destination, year_data in result_country.items %}
+                    <tr>
+                        <td>{{ origin_destination }}</td>
+                        {% for year, total_amount in year_data.items %}
+                        <td>{{ total_amount }}</td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            {% endif %}
             
         </tbody>
     </table>
