--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -48,9 +48,9 @@
     </div>
 </div>
 
-<div class="fs-6  fw-bold text-center">List of supplying markets for the product imported by Nepal   </div>
-<div class="fs-6  fw-bold text-center">Product : </div>
-<div class="fs-6  fw-bold text-center">Country: {{display_country}} </div>
+<div class="fs-6 mt-4  fw-bold text-center">List of supplying markets for the product imported by Nepal   </div>
+<div class="fs-6  fw-bold text-center">Product : {{display_hs_code}} </div>
+<div class="fs-6 mb-4 fw-bold text-center">Country: {{display_country}} </div>
 
 
 <div class="table-responsive mt- bg-light p-3">
