--- a/databank/import/templates/import/time_series.html
+++ b/databank/import/templates/import/time_series.html
@@ -56,6 +56,11 @@
 <div class="display-flex bg-light text-center fs-5 fw-normal text-danger p-5">No Records Found</div>
 {% else %}
 <div class="table-responsive mt- bg-light p-3">
+    <div class="d-flex justify-content-end align-items-center mb-3">
+        <a href="{% url 'trade_record_to_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link"
+        ><i class="fa-solid fa-table "></i> <span>Export to Excel</span></a
+      >
+    </div>
     <table class="table table-striped table-bordered table-sm">
         <thead class="">
             <tr>
