--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -1,123 +1,137 @@
 {% extends 'main.html' %} {% block content %}
-<button
+<div class="d-flex">
+  <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
   data-bs-target="#collapseFilter"
   aria-expanded="false"
   aria-controls="collapseFilter"
-  style="background-color: #419197;font-size:14px;font-weight: 500; color: white; "
+  style="background-color: #419197;font-size:14px;font-weight: 500; color: white;"
 
->
-  Filters
-</button>
+  >
+    Filters
+  </button>
+  <div class="fs-5 fw-semibold text-right">Forest Data</div>
+</div>
 
-{% if messages %}
-  {% for m in messages %}
-    <h1 class="m.tags">{{m}}</h1>
-  {% endfor %}
-{% endif %}
+<div>
+  {% if messages %}
+    {% for m in messages %}
+      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 " id="delete_selected_message" role="alert">
+        {{m}}
+        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  {% endif %}
+</div>
 
-<div class="bg-light mt-2">
-  <div class="collapse shadow rounded-2 p-4" id="collapseFilter">
-    <form class="row g-3" method="GET" action="./forest_table">
-      <!-- <div class="form-group col-12">
-                <div class="input-group">
-                    <input class="form-control py-2 border-right-0 border" type="search"
-                        name="currency_product_originDestination"
-                        placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-    
-                </div>
-            </div> -->
 
-      <div class="col-md-3">
-        <label for="date_minimum">Calender Date Minimum</label>
-        <input
-          type="date"
-          class="form-control"
-          id="date_minimum"
-          name="date_min"
-        />
-      </div>
-      <div class="col-md-3">
-        <label for="date_maximum">Calender Date Maximum</label>
-        <input
-          type="date"
-          class="form-control"
-          id="date_maximum"
-          name="date_max"
-        />
-      </div>
 
-      <div class="col-md-3">
-        <label for="ViewNameOfPlant">Name of the plant </label>
-        <input
-          type="text"
-          class="form-control"
-          id="view_plant_Name"
-          placeholder="e.g. saal"
-          name="name_of_the_plant"
-        />
-      </div>
-      <div class="form-group col-md-3">
-        <label for="country_category">Country</label>
-        <select
-          id="country_category"
-          class="form-control"
-          name="country_category"
-        >
-          <option selected>--</option>
-          {% for country_category in country_categories %}
-          <option value="{{country_category.id}}">{{country_category}}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="col-md-3">
-        <label for="viewAreaUnit">Area Unit</label>
-        <select id="area_unit" name="area_unit" class="form-control">
-          <option selected>--</option>
-          {% for area_unit in area_unit_categories %}
-          <option value="{{area_unit.id}}">{{area_unit}}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="col-md-3">
-        <label for="viewStockAvailable">Stock Available</label>
-        <input
-          type="number"
-          min="0"
-          class="form-control"
-          id="viewStockAvailable"
-          placeholder="1000"
-          name="stock_available"
-        />
-      </div>
-      <div class="col-md-3 d-flex align-items-end">
-        <button type="submit" class=" btn btn-primary">
-          Search
-        </button> 
-      </div>
-    </form>
+<div class="bg-light mt-3">
+
+  <div class="collapse shadow rounded-2 " id="collapseFilter">
+    <div class="px-2 py-2"> 
+      <form class="row" method="GET" action="./forest_table">
+        
+        <!-- <div class="form-group col-12">
+                  <div class="input-group">
+                      <input class="form-control py-2 border-right-0 border" type="search"
+                          name="currency_product_originDestination"
+                          placeholder="Search by Currency Type, Product Information or Origin/Destination" />
+      
+                  </div>
+              </div> -->
+  
+        <div class="col-md-3">
+          <label for="date_minimum">Calender Date Minimum</label>
+          <input
+            type="date"
+            class="form-control"
+            id="date_minimum"
+            name="date_min"
+          />
+        </div>
+        <div class="col-md-3">
+          <label for="date_maximum">Calender Date Maximum</label>
+          <input
+            type="date"
+            class="form-control"
+            id="date_maximum"
+            name="date_max"
+          />
+        </div>
+  
+        <div class="col-md-3">
+          <label for="ViewNameOfPlant">Name of the plant </label>
+          <input
+            type="text"
+            class="form-control"
+            id="view_plant_Name"
+            placeholder="e.g. saal"
+            name="name_of_the_plant"
+          />
+        </div>
+        <div class="form-group col-md-3">
+          <label for="country_category">Country</label>
+          <select
+            id="country_category"
+            class="form-control"
+            name="country_category"
+          >
+            <option selected>--</option>
+            {% for country_category in country_categories %}
+            <option value="{{country_category.id}}">{{country_category}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label for="viewAreaUnit">Area Unit</label>
+          <select id="area_unit" name="area_unit" class="form-control">
+            <option selected>--</option>
+            {% for area_unit in area_unit_categories %}
+            <option value="{{area_unit.id}}">{{area_unit}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label for="viewStockAvailable">Stock Available</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="viewStockAvailable"
+            placeholder="1000"
+            name="stock_available"
+          />
+        </div>
+        <div class="col-md-3 d-flex align-items-end">
+          <button type="submit" class=" btn btn-primary">
+            Search
+          </button> 
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 <div>
   <form method="post" action="{% url 'delete_selected' %}" id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
-      <div class="d-flex align-items-center justify-content-between mb-3">
+      <div class="d-flex align-items-center justify-content-between px-2">
         <span class="text-danger fs-6 fw-lighter mb-1">
           * {{data_len}} records found.
         </span>
         <div class="d-flex align-items-center py-2">
           <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
             <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
-              <span>Delete Selected</span>
+              <span class="fw-normal">Delete Selected</span>
           </button>
             <a
               href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
-            <span>Export to Excel</span>
+            <span class="fw-normal">Export to Excel</span>
             </a>
           
         </div>
@@ -226,6 +240,18 @@
           alert("Delete canceled!");
       }
   }
+
+  setTimeout(function(){
+    var success_message=document.getElementById('delete_selected_message');
+    if(success_message){
+      success_message.style.transition = "opacity 2s";
+      success_message.style.opacity = '0';
+
+      setTimeout(function() {
+        success_message.style.display='none';
+      }, 3000);
+    }
+  }, 3000);
   </script>
   
 {% endblock %}
