--- a/databank/trade_data/templates/trade_data/display_trade_table.html
+++ b/databank/trade_data/templates/trade_data/display_trade_table.html
@@ -124,7 +124,7 @@
         </div>
 
         <div class="col-md-3 d-flex align-items-end">
-          <button type="submit" class="col-md-1 btn btn-sm btn-primary">
+          <button type="submit" class="btn btn-primary">
           Search
           </button>
         </div>
