--- a/databank/trade_data/templates/trade_data/upload_form.html
+++ b/databank/trade_data/templates/trade_data/upload_form.html
@@ -1,12 +1,31 @@
 {% extends 'main.html' %}
 {% block content %}
 
-<div class="bg-light p-3 w-50">
+<!-- <div class="bg-light p-3 w-50">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-primary" type="submit">Upload</button>
     </form>
 </div>
-<br>
+<br> -->
+
+<div class="container bg-light p-3 shadow">
+  
+    <form method="POST" >
+      {% csrf_token %}<div class="row">
+      {% for field in form %}
+        <div class="col-6 mb-2">
+          <label for="{{field.label}}"> {{field.label}} </label>
+          
+            {{field}}
+         
+        
+        </div>
+      {% endfor %}</div>
+      <button type="submit" class="btn btn-primary">upload</button>
+    </form>
+  </div>
+  
+</div>
 {% endblock content %}
