--- a/databank/trade_data/templates/trade_data/display_country_meta.html
+++ b/databank/trade_data/templates/trade_data/display_country_meta.html
@@ -3,6 +3,7 @@
 
 
 <div class="container">
+  <span class="text-danger">* {{total_data}} Records Found</span>
   <table class="table table-striped table-bordered table-sm ">
     <thead>
       <tr>
@@ -13,18 +14,53 @@
       </tr>
     </thead>
     <tbody class="table-group-divider">
-      {% for d in data %}
+      {% for record in page %}
       <tr class="">
         <!-- <th scope="row">1</th> -->
-        <td class="px-2"> {{d.Country_Name}} </td>
-        <td class="px-2"> {{d.Country_Code_2}} </td>
-        <td class="px-2">{{d.Country_Code_3}} </td>
+        <td class="px-2"> {{record.Country_Name}} </td>
+        <td class="px-2"> {{record.Country_Code_2}} </td>
+        <td class="px-2">{{record.Country_Code_3}} </td>
       </tr>
       {% endfor %}
 
     </tbody>
   </table>
 
+</div>
+<div class="pagination m-3 d-flex justify-content-center">
+  <span
+    class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3"
+  >
+    {% if page.has_previous %}
+    <a
+      href="?page=1"
+    >
+      &laquo; First
+    </a>
+    <a
+      href="?page={{ page.previous_page_number }}"
+    >
+      Previous
+    </a>
+    {% endif %}
+
+    <span class="current-page">
+      Page {{ page.number }} of {{ page.paginator.num_pages }}.
+    </span>
+
+    {% if page.has_next %}
+    <a
+      href="?page={{ page.next_page_number }}"
+    >
+      Next
+    </a>
+    <a
+      href="?page={{ page.paginator.num_pages }}"
+    >
+      Last &raquo;
+    </a>
+    {% endif %}
+  </span>
 </div>
 
 {% endblock content %}
