--- a/databank/trade_data/templates/trade_data/display_country_meta.html
+++ b/databank/trade_data/templates/trade_data/display_country_meta.html
@@ -7,10 +7,12 @@
   <table class="table table-striped table-bordered table-sm ">
     <thead>
       <tr>
-        <!-- <th scope="col">#</th> -->
-        <th scope="col" class="p-2">Country Name</th>
-        <th scope="col" class="p-2">Country Code 2</th>
-        <th scope="col" class="p-2">Country Code 3</th>
+        {% for column in column_names %}
+        {% if column.name != 'id' %}
+        <th scope="col" class="p-2">{{ column.verbose_name }}</th>
+        {% endif %}
+        {% endfor %}
+
       </tr>
     </thead>
     <tbody class="table-group-divider">
@@ -28,18 +30,12 @@
 
 </div>
 <div class="pagination m-3 d-flex justify-content-center">
-  <span
-    class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3"
-  >
+  <span class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3">
     {% if page.has_previous %}
-    <a
-      href="?page=1"
-    >
+    <a href="?page=1">
       &laquo; First
     </a>
-    <a
-      href="?page={{ page.previous_page_number }}"
-    >
+    <a href="?page={{ page.previous_page_number }}">
       Previous
     </a>
     {% endif %}
@@ -49,14 +45,10 @@
     </span>
 
     {% if page.has_next %}
-    <a
-      href="?page={{ page.next_page_number }}"
-    >
+    <a href="?page={{ page.next_page_number }}">
       Next
     </a>
-    <a
-      href="?page={{ page.paginator.num_pages }}"
-    >
+    <a href="?page={{ page.paginator.num_pages }}">
       Last &raquo;
     </a>
     {% endif %}
