--- a/databank/trade_data/templates/trade_data/duplicate_template.html
+++ b/databank/trade_data/templates/trade_data/duplicate_template.html
@@ -4,7 +4,8 @@
 
 <div class="row">
     <div class="alert alert-danger col-8" role="alert">
-        Cannot add duplicate records. <a href="#" class="alert-link">Export Excel?</a>
+        Cannot add duplicate records. 
+        <a href="{% url 'download_duplicate_excel' %}" class="alert-link">Export Excel?</a> 
       </div>
 </div>
     
